--- a/css/style.css
+++ b/css/style.css
@@ -87,7 +87,7 @@ body {
 /* component/service box */
 .cbox {
     display: table;
-    background-color:#eee;
+    background-color:#69BE28;
     width:50px;
     height:50px;
     margin:4px;
