- moved clipboard JS from ctrl to tmpl - changed styling of blueprint page - added tooltip to finalize button on byoc page - moved js loading to the end of body - FIXED: bug in default enviornment, blueprint var. not set for historyserver - Blueprint: added yarn ha config support and bundle detection; new processto update config and reset bundle config

--- a/css/style.css
+++ b/css/style.css
@@ -209,7 +209,8 @@ body {
 
 .blueprint pre {
   font-size:11px;
-  height: 400px;
+  height: 550px;
+  word-wrap: normal;
   overflow-y:scroll;
 }
 
